wrapped claim here button in conditonal and fixed margins

--- a/src/app/home/components/home-info-panel/home-info-panel.component.scss
+++ b/src/app/home/components/home-info-panel/home-info-panel.component.scss
@@ -41,17 +41,13 @@
 	// 	margin-bottom: 1rem;
 	// }
 
-	button {
-		margin-bottom: 1rem;
-	}
+	// button {
+	// 	margin-bottom: 1rem;
+	// }
 }
 
 .about-community-container {
 	text-align: center;
-}
-
-.owner-wrap {
-	margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 600px) {
